# PaperManipulation

./: .gitattributes  .gitignore  CMakeLists.txt  F_offset_sweep.pgf  Fn_noise_plot.pgf  Untitled.ipynb  adaptive_control.ipynb  arm.py  body_pose_wrapper.py  common.py  config.py  constants.py  controller.py  convert_impedance_traj.py  finger.py  folding_controller.py  impedance_contact_point.pgf  impedance_contact_point_0.pgf  impedance_contact_point_1.pgf  impedance_sweep.pgf  impedance_vision_and_force_full_hinge_1.pgf  impedance_vision_and_force_full_hinge_2.pgf  k_J_force_full_hinge.pgf  k_J_open_loop_full_hinge.pgf  k_J_plot.pgf  k_J_sweep.pgf  k_J_sweep_1.pgf  k_J_sweep_2.pgf  k_J_sweep_zoom.pgf  k_J_vis_full_hinge.pgf  kinematics_check.ipynb  log_wrapper.py  m_J_vis_full_hinge.pgf  m_L_force_full_hinge.pgf  m_L_full_hinge.pgf  m_L_plot.pgf  m_L_sweep.pgf  m_L_vis_full_hinge.pgf  manipulator.py  math_experiments.ipynb  (+42 more)
controllers/: edge_controller.py  optimization_controller.py  pd_controller.py
ctrl/: aux.py  cartesian_impedance.py  common.py  inverse_dynamics.py  kinematic_ctrlr.py
models/: panda_arm_collision_only.urdf
panda/: generate_impedance_traj.py  panda_config.py  poses.npz  sphere_ee_config.json
perception/: proprioception.py  vision.py
plant/: manipulator.py  paper.py  pedestal.py  simulation.py
src/: paper_dynamics.cpp
sweep_scripts/: ff_Fn.npz  ff_Fn.py  sweep_runner.py
sweeps/: b_J.npz  b_J.py  constant_Fn__ff_Fn.npz  constant_Fn__ff_Fn.py  constant_Fn__impedance.npz  constant_Fn__k_J.npz  constant_Fn__k_J.py  constant_Fn__m_L.npz  (+101 more)
(+5 files in other folders)
